<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background" >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        android:contentDescription="@string/aguadatos"
        app:layout_constraintBottom_toTopOf="@id/accountPromptText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/accountPromptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_prompt"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/backdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.67"
        android:background="@drawable/very_rounded_white"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Input Fields -->
        <LinearLayout
            android:id="@+id/textFields"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:gravity="center">

            <!-- Name -->
            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/nameLayout"
                app:layout_constraintBottom_toTopOf="@id/nameLayout" />

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/rounded_white_outlined"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/nameIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/person_icon"
                    android:contentDescription="@string/person" />

                <EditText
                    android:id="@+id/nameField"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:autofillHints="username"/>
            </LinearLayout>

            <!-- Email -->
            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/emailField"
                app:layout_constraintBottom_toTopOf="@id/emailField" />

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/rounded_white_outlined"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/person_icon"
                    android:contentDescription="@string/person" />

                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"/>
            </LinearLayout>

            <!-- Password -->
            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/password"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/passwordField"
                app:layout_constraintBottom_toTopOf="@id/passwordField" />

            <LinearLayout
                android:id="@+id/passwordLayout"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/rounded_white_outlined"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/passwordIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/lock_icon"
                    android:contentDescription="@string/lock" />

                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:autofillHints=""/>
            </LinearLayout>


            <!-- Confirm Password -->
            <TextView
                android:id="@+id/confirmLabel"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/confirm_password"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/passwordField"
                app:layout_constraintBottom_toTopOf="@id/passwordField" />

            <LinearLayout
                android:id="@+id/confirmLayout"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/rounded_white_outlined"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/confirmIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/lock_icon"
                    android:contentDescription="@string/lock" />

                <EditText
                    android:id="@+id/confirmField"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:autofillHints="no"/>
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:background="@drawable/rounded_blue"/>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_separator"
                android:textColor="@color/black" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/logInButton"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/log_in"
            android:textColor="@color/blue"
            android:background="@drawable/rounded_white_outlined"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>